# django-template

./: .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
app/: Dockerfile  pyproject.toml  uwsgi.ini
app/app/: admin.py  apps.py  models.py  permissions.py  serializers.py  settings.py  urls.py  views.py
app/auth/: admin.py  apps.py  handlers.py  models.py  serializers.py  urls.py  views.py
app/config/: .env.dist  asgi.py  settings.py  urls.py
app/core/: settings.py
app/templates/auth/email/: email_confirmation_message.txt  email_confirmation_subject.txt  password_reset_body.txt  password_reset_subject.txt
docker/app/: Dockerfile
docker/nginx/conf/: app_nginx.conf
docker/python/: Dockerfile  requirements.txt
scripts/: docker_install.sh
